k8s/prod/deployment_prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-service-prod
  namespace: section-31-prod
  labels:
    app: document-service-prod
  annotations:
    prometheus.io/scrape: "true"
spec:
  replicas: 150
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: document-service-prod
      serve: 'yes'
  template:
    metadata:
      labels:
        app: document-service-prod
        track: stable
        serve: 'yes'
      annotations:
        logging.meltwater.io/system: "section-31-prod"
        logging.meltwater.io/service: "document-service-prod" 
        logging.meltwater.io/environment: "production"
        logging.meltwater.io/type: "nested_json"
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      containers:
        - name: document-service-prod
          image: 295413561492.dkr.ecr.eu-west-1.amazonaws.com/document-service:${VERSION}
          resources:
            limits:
              cpu: 364m
              memory: 364Mi
            requests:
              cpu: 128m
              memory: 256Mi
          ports:
            - containerPort: 80
      dnsConfig:
        options:
          - name: ndots
            value: "1"
